# nmos-cpp

./: CMakeLists.txt
Development/: CMakeLists.txt  conanfile.txt
Development/cmake/: NmosCppCommon.cmake  NmosCppConan.cmake  NmosCppLibraries.cmake  NmosCppVcpkg.cmake
Development/nmos/: connection_activation.cpp  connection_api.cpp  log_gate.h  sdp_utils.cpp  sdp_utils.h
conan/: conan.cmake.patch
vcpkg/ports/nmos-cpp/: portfile.cmake
